--- a/index.html.html
+++ b/index.html.html
@@ -52,13 +52,13 @@
       <h2>Get In Touch</h2>
       <h3>If you want to Join the winning team.</h3>
       <p class="contact-message"></p>
-      <a class="btn" href="adamssouza4@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:adamssouza4@gmail.com">CONTACT ME</a>
 
       <div class="bottom-container">
     <a class="footer-link" href=https://wa.me/+31637694069?text=I%20am%20interested%20in%20Joining%20The%20VIP%20">Whatsapp</a>
     <a class="footer-link" href="https://t.me/footballfortunescoresolution">Telegram</a>
     <a class="footer-link" href="https://play.google.com/store/apps/details?id=precision.scores">Our app</a>
-    <p class="copyright">© 2021 Football Fortune @ verified.</p>
+    <p class="copyright">© 2022 Football Fortune @ verified.</p>
   </div>
 
     </div>
